tabletop-tracker/main/default/objects/Character_Skillset__c/Character_Skillset__c.object-meta.xml
<CustomObject>
    <label>Character Skillset</label>
    <nameField>
        <label>Character Skillset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Character Skillsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>