tabletop-tracker/main/default/objects/Character_Skillset__c/fields/AC__c.field-meta.xml
<CustomField>
    <fullName>AC__c</fullName>
    <label>AC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>