tabletop-tracker/main/default/objects/Character_Skillset__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Character Skillsets</relationshipLabel>
    <relationshipName>Character_Skillsets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>