tabletop-tracker/main/default/objects/Character_Skillset__c/fields/Charisma__c.field-meta.xml
<CustomField>
    <fullName>Charisma__c</fullName>
    <label>Charisma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>