tabletop-tracker/main/default/objects/Character_Skillset__c/fields/Dexterity__c.field-meta.xml
<CustomField>
    <fullName>Dexterity__c</fullName>
    <label>Dexterity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>