tabletop-tracker/main/default/objects/Character_Skillset__c/fields/Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Intelligence__c</fullName>
    <label>Intelligence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>