tabletop-tracker/main/default/objects/Character_Skillset__c/fields/Skillset__c.field-meta.xml
<CustomField>
    <fullName>Skillset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skillset</label>
    <referenceTo>Skillset__c</referenceTo>
    <relationshipLabel>Character Skillsets</relationshipLabel>
    <relationshipName>Character_Skillsets</relationshipName>
    <type>Lookup</type>
</CustomField>