tabletop-tracker/main/default/objects/Character_Skillset__c/fields/Wisdom__c.field-meta.xml
<CustomField>
    <fullName>Wisdom__c</fullName>
    <label>Wisdom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>