tabletop-tracker/main/default/objects/Character_Skillset__c/recordTypes/Dungeons_and_Dragons.recordType-meta.xml
<RecordType>
    <fullName>Dungeons_and_Dragons</fullName>
    <active>true</active>
    <label>Dungeons and Dragons</label>
</RecordType>